<!--
  ~ /*
  ~  * Copyright (c) 2025 Florian Nadin
  ~  * All rights reserved.
  ~  * Last modified 18/08/2024 11:46
  ~  *
  ~  * Ce fichier fait partie du logiciel cédé conformément au contrat signé entre les parties.
  ~  *
  ~  * Toute utilisation, modification ou distribution du code source est soumise aux conditions de la cession :
  ~  * - Le logiciel est fourni en l'état, sans garantie d'aucune sorte.
  ~  * - L'utilisation est restreinte à l'usage prévu par le cessionnaire.
  ~  * - Toute reproduction ou commercialisation du code sans autorisation expresse est interdite.
  ~  * - Le cessionnaire est tenu de préserver la confidentialité du code source.
  ~  *
  ~  * Voir le fichier README.md pour plus de détails sur les conditions d'utilisation.
  ~  */
  -->

<resources>
    <string name="AOC">(Appellation d\'origine controlée)</string>
    <string name="AOCs">(Appellations d\'origine controlées)</string>
    <string name="IGP">(Indication géographique protégée)</string>
    <string name="adresseDonjon">Romain Flesch et Alexandre Brunier 58500 CLAMECY</string>
    <string name="adresseOuche">Thomas Mousseau 18350 OUROUER LES BOURDELINS</string>
    <string name="adresseVeurdre">23 route de Bourbon 03320 LE VEURDRE</string>
    <string name="alergene">🌾 : Ne contient pas de gluten\n🌱 : Convient au régime végétarien</string>
    <string name="gluten">🌾 : Ne contient pas de gluten</string>
    <string name="amorceBoissons">Nos apéritifs \nNos bières \n...</string>
    <string name="amorceMenus">Nos formules \nNos menus \nNotre carte \n...</string>
    <string name="app_name">Restaurant Le Bengy</string>
    <string name="bienvenueMessage">Bienvenue sur la carte interactive du Bengy</string>
    <string name="descriptionLogo">Logo du restaurant</string>
    <string name="encourschargement">En cours de chargement</string>
    <string name="headerBouteille">La bouteille</string>
    <string name="headerCarafe">La carafe</string>
    <string name="headerMillesime">Millésime</string>
    <string name="headerPrix1">Prix (1 L)</string>
    <string name="headerPrix12">Prix au verre</string>
    <string name="headerPrix150">Prix (1.5 L)</string>
    <string name="headerPrix2">Prix (2 cL)</string>
    <string name="headerPrix33">Prix (33 cL)</string>
    <string name="headerPrix37">Prix (37.5 cL)</string>
    <string name="headerPrix4">Prix (4 cL)</string>
    <string name="headerPrix45">Prix (45 cL)</string>
    <string name="headerPrix50">Prix (50 cL)</string>
    <string name="headerPrix75">Prix (75 cL)</string>
    <string name="headerVerre">Le verre</string>
    <string name="chargement">Chargement ...</string>
    <string name="lesPlats">     🥗C\'est par ici !🥮     </string>
    <string name="bières">🍺 Nos bières 🍻</string>
    <string name="aperos">🍸 Notre bar ☕</string>
    <string name="messageVinAuVerre">Nos vins au verre (12 cl) en carafe (45 cl) ou en bouteille (75 cl)</string>
    <string name="tab_text_1">Menu enfant</string>
    <string name="tab_text_2">Menu à 29€</string>
    <string name="tab_text_3">Menu à 39€</string>
    <string name="tab_text_vegan">Menu végétarien</string>
    <string name="tab_text_4">La carte</string>
    <string name="tab_text_5">Nos fournisseurs</string>
    <string name="tab_text_AlsaceSavoie">Alsace et Savoie</string>
    <string name="tab_text_aperitifs">Apéritifs</string>
    <string name="tab_text_digestifs">Digestifs</string>
    <string name="tab_text_etAussi">Et aussi...</string>
    <string name="tab_text_vinB1">Loire</string>
    <string name="tab_text_vinB2">Bourgogne</string>
    <string name="tab_text_vinB3">Vallée du Rhône</string>
    <string name="tab_text_vinB4">Alsace</string>
    <string name="tab_text_vinB5">Plus au sud</string>
    <string name="tab_text_vinB6">Vin de pays</string>
    <string name="tab_text_vinD1">Loire</string>
    <string name="tab_text_vinD2">Bourgogne</string>
    <string name="tab_text_vinD3">Beaujolais</string>
    <string name="tab_text_vinD4">Bordeaux</string>
    <string name="tab_text_vinD5">Vallée du Rhône</string>
    <string name="tab_text_vinR1">Loire</string>
    <string name="tab_text_vinR2">Bourgogne</string>
    <string name="tab_text_vinR3">Beaujolais</string>
    <string name="tab_text_vinR4">Vallée du Rhône</string>
    <string name="tab_text_vinR5">Plus au sud</string>
    <string name="tab_text_vinR6">Bordelais</string>
    <string name="tab_text_vinR7">Vins de pays</string>
    <string name="tab_text_whisky">Whiskies</string>
    <string name="title_activity_les_menus">Nos menus</string>
    <string name="title_activity_rose">Restaurant Le Bengy</string>
    <string name="title_activity_test">TEst</string>
    <string name="tab_text_6">6</string>
    <string name="tab_text_7">7</string>

    <string name="desc_biodubec">Des productions sur une parcelle Bio depuis 30 ans où la fraicheur et la qualité sont de mise\, valorisant la richesse du terroir local. Des légumes sains et Bios que vous pouvez déguster dans nos assiettes selon la saison.</string>
    <string name="desc_fournilstarigle">Boulangerie pâtisserie de qualité. Cette boulangerie allie le beau\, le bon et le Bio. Vous retrouverez leurs pains Tradition tout au long de votre repas\, leurs pains spéciaux pour la cuisine ainsi que le plateau de fromages. \n Vous pouvez les découvrir dans leur boutique dans le centre ville de Nevers.</string>
    <string name="desc_rougeaux">Ferrue des escargots\, elle peut vous accueillir dans son élevage à la chapelle Monlinard dans le Cher (18) et vous faire découvrir son univers au rythme des escargots et de la cueillette.</string>
    <string name="desc_maisonFromages">Livrés par Amandine de la maison du fromage\, vous pouvez déguster sur notre plateau\, des fromages variés\, du corsé\, du doux\, du moelleux\, du fondant\, vache\, chèvre et brebis\, pâte molle\, pâte lavée\, pâte cuite… Vous trouverez votre bonheur.</string>
    <string name="desc_gautheron">Paysan et maraîcher Bio\, conduite en agriculture biologique. Il nous livre également ses oeufs élevés en plein air.</string>
    <string name="desc_safran">Nous avons découvert le safran Nivernais. Nous tenions à vous le faire partager dans nos plats. Un safran 100\% naturel\, cultivé sur une exploitation à découvrir.</string>
    <string name="desc_auron">Fabrication artisanale française en Bio. Nous travaillons ses huiles pour certaines entrées et parfois sur nos desserts. L\'huilerie perpétue depuis plus de 150 ans un savoir-faire cher au Berry \: la valorisation des fruits sauvages régionaux. Vous pouvez vous même faire votre propre huile de noix directement à la propriété. A découvrir.</string>
    <string name="desc_piscimorvan">Au pied de Châteu-Chinon\, en bordure de l\'Yonne\, vous trouverez la pisciculture de Corancy. On y trouve des truites arc-en-ciel\, des truites Fario et des saumons de Fontaine de qualité.</string>
    <string name="desc_donjon">Sur les territoirs des ducs et des vignobles de Bourgogne. Brasseur de bière classique ou originale\, puissante ou douce\? Vous pouvez découvrir leurs bières\, blondes\, blanches\, ambrées\, noires\, à la rose\, cerise\, cervoise\, triples\, quintuples\, IPA ou éphémères… Dans les festivals de jeu de rôle\, salon brassicole ou fêtes médiévales.</string>
    <string name="desc_loup">Bière artisanale du Bourbonnais installé dans une chapelle du XIIème siècle dans le centre bourg du Veurdre depuis 2017.\nBière Bio brassée avec des céréales d\'agonges\, du malt d\'Auvergne et du Cher et des houblons européens. Un grand passionné\, MATHIEU GUEMAERE vous fera partager son savoir faire avec plaisir et vous racontera cette histoire ou légende du loup du VEURDRE.</string>
    <string name="desc_font">A Tartaras\, tout près des Monts Lyonnais\, leur terroir permet d\'exprimer pleinement toutes les saveurs de leurs fruits. Patrick Font travaille les fruits de saison à maturité pour en tirer le meilleur et l\'authenticité gustative.</string>


</resources>