<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_gravity="center">
    <ImageView android:background="#F8ECC9" app:layout_constraintHorizontal_bias="0.558" app:layout_constraintTop_toTopOf="parent" android:layout_width="0dp" android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imageView2"/>
    <ImageView android:layout_marginEnd="150dp" app:layout_constraintTop_toTopOf="@+id/imageView10" android:layout_width="100dp" android:layout_height="100dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="@+id/imageView10" app:layout_constraintVertical_bias="0.0" app:srcCompat="@drawable/faitmaison" android:id="@+id/imageView11"/>
    <ImageView app:layout_constraintTop_toTopOf="@+id/imageView10" android:layout_width="100dp" android:layout_height="100dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="@+id/imageView10" android:layout_marginStart="150dp" app:layout_constraintVertical_bias="0.0" app:srcCompat="@drawable/logotoques" android:id="@+id/imageView12"/>
    <ImageView android:layout_marginBottom="32dp" android:layout_marginEnd="16dp" android:layout_width="160dp" android:layout_height="91dp" app:layout_constraintEnd_toStartOf="@+id/imageView11" app:layout_constraintStart_toEndOf="@+id/imageView12" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp" app:srcCompat="@drawable/logo_afmr" android:id="@+id/imageView10"/>
    <TextView android:layout_width="626dp" android:layout_height="wrap_content" android:textSize="50sp" android:layout_marginTop="32dp" app:fontFamily="@font/simonetta" app:layout_constraintTop_toBottomOf="@+id/imageView" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/simonetta" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView2" android:text="@string/bienvenueMessage" android:textStyle="bold"/>
    <TextView android:layout_marginEnd="16dp" android:layout_width="347dp" android:layout_height="202dp" android:onClick="clickOnMenus" android:textSize="36sp" app:layout_constraintEnd_toStartOf="@+id/divider2" android:layout_marginTop="32dp" app:fontFamily="@font/simonetta" android:layout_marginStart="16dp" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintTop_toTopOf="@+id/divider2" app:layout_constraintStart_toStartOf="parent" android:fontFamily="@font/simonetta" android:textAllCaps="false" android:id="@+id/textView5" android:text="@string/amorceMenus" android:textStyle="bold"/>
    <TextView android:layout_marginEnd="32dp" android:layout_width="342dp" android:layout_height="207dp" android:onClick="clickOnVins" android:textSize="36sp" app:layout_constraintStart_toEndOf="@+id/divider2" android:layout_marginTop="32dp" app:fontFamily="@font/simonetta" android:layout_marginStart="32dp" android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Medium" app:layout_constraintTop_toTopOf="@+id/divider2" android:fontFamily="@font/simonetta" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="@+id/imageView2" android:id="@+id/textView6" android:text="@string/amorceBoissons" android:textStyle="bold"/>
    <ImageView android:contentDescription="@string/descriptionLogo" app:layout_constraintTop_toTopOf="parent" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp" app:srcCompat="@drawable/lebengypng" android:id="@+id/imageView"/>
    <View android:layout_marginBottom="16dp" android:background="?android:attr/listDivider" app:layout_constraintHorizontal_bias="0.5" android:layout_width="1dp" android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp" app:layout_constraintBottom_toTopOf="@+id/infoTemp" app:layout_constraintTop_toBottomOf="@+id/textView2" android:id="@+id/divider2"/>
    <Button android:layout_marginEnd="64dp" app:layout_constraintHorizontal_bias="0.502" android:layout_width="0dp" android:layout_height="71dp" android:onClick="clickOnMenus" android:textSize="18sp" android:textColor="#FFFFFF" app:layout_constraintEnd_toStartOf="@+id/divider2" android:layout_marginTop="16dp" android:layout_marginStart="64dp" app:layout_constraintTop_toBottomOf="@+id/textView5" android:background="#795548" app:layout_constraintStart_toStartOf="parent" android:id="@+id/button2" android:text="@string/lesPlats"/>
    <Button android:layout_marginEnd="64dp" android:layout_width="0dp" android:layout_height="71dp" android:onClick="clickOnVins" android:textSize="18sp" android:textColor="#FFFFFF" app:layout_constraintStart_toEndOf="@+id/divider2" android:layout_marginStart="64dp" android:background="#795548" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBaseline_toBaselineOf="@+id/button2" android:id="@+id/button3" android:text="@string/lesVins"/>
    <com.tomer.fadingtextview.FadingTextView android:layout_marginEnd="16dp" android:layout_width="0dp" android:layout_height="wrap_content" android:textSize="36sp" android:textColor="#3C2C27" android:layout_marginTop="32dp" android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/button3" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent" app:timeout="3000" android:fontFamily="@font/simonetta" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/infoTemp" android:textStyle="bold"/>
    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/simonetta"
        android:text="Cuisine entièrement &quot;faite maison&quot;"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>